fixed text overlapping input field borders when focussed

--- a/resources/css/components/_forms.scss
+++ b/resources/css/components/_forms.scss
@@ -62,7 +62,7 @@ input {
             color: $primary;
             font-weight: $bold;
         }
-    
+        margin-top: $base / 2;
         padding-bottom: $base / 2;
         border-width: 3px;
         border-color: $primary;
